# libssynth

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CommandLine.cpp
src/ssynth/: ColorPool.cpp  ColorPool.h  ColorUtils.cpp  ColorUtils.h  Exception.h  Logging.cpp  Logging.h  Matrix4.h  MiniParser.cpp  MiniParser.h  Random.h  RandomStreams.cpp  RandomStreams.h  Vector3.h
src/ssynth/Model/: Action.cpp  Action.h  AmbiguousRule.cpp  AmbiguousRule.h  Builder.cpp  Builder.h  CustomRule.cpp  CustomRule.h  ExecutionStack.h  PrimitiveClass.h  PrimitiveRule.cpp  PrimitiveRule.h  Rule.h  RuleRef.h  RuleSet.cpp  RuleSet.h  State.cpp  State.h  Transformation.cpp  Transformation.h  TransformationLoop.h
src/ssynth/Model/Rendering/: ObjRenderer.cpp  ObjRenderer.h  Renderer.h  TemplateRenderer.cpp  TemplateRenderer.h
src/ssynth/Parser/: EisenParser.cpp  EisenParser.h  Preprocessor.cpp  Preprocessor.h  Tokenizer.cpp  Tokenizer.h
